# test-task

./: CMakeLists.txt  README.md
src/child/: CMakeLists.txt  ChildProcess.cpp  ChildProcess.hpp  main.cpp
src/parent/: CMakeLists.txt  main.cpp
